Fixes for treemap wrapping

--- a/css/vistk.css
+++ b/css/vistk.css
@@ -47,12 +47,6 @@ text {
   fill: yellow;
 }
 
-tspan {
-  font: 20px Verdana, Helvetica, Arial, sans-serif;
-  fill: white;
-  font-weight: bold
-}
-
 /* Scatterplot */
 
 .axis path,
